@@ -170,9 +170,15 @@ end
 script.on_event(defines.events.on_object_destroyed, function(event)
   local deathrattle = storage.deathrattles[event.registration_number]
   if deathrattle then storage.deathrattles[event.registration_number] = nil
-    if deathrattle.name == "trigger-2" then
-      game.print("60 seconds")
-      Planet.arm_trigger_2(storage.buildings[deathrattle.building_index])
+    if deathrattle.name == "trigger-1" then
+      game.print("working")
+      Planet.arm_trigger_n(storage.buildings[deathrattle.building_index], 2)
+    elseif deathrattle.name == "trigger-2" then
+      game.print("waiting for items")
+      Planet.arm_trigger_n(storage.buildings[deathrattle.building_index], 1)
+    elseif deathrattle.name == "trigger-3" then
+      game.print("recipe finished")
+      Planet.arm_trigger_n(storage.buildings[deathrattle.building_index], 3)
     elseif deathrattle.name == "building" then
       local building = storage.buildings[event.useful_id]
       if building then storage.buildings[event.useful_id] = nil
