@@ -100,17 +100,18 @@ Planet.setup_combinators = function(building)
   building.children.trigger_1.set_recipe("wooden-chest")
   building.trigger_1_input_stack  = building.children.trigger_1.get_inventory(defines.inventory.crafter_input)[1]
   building.trigger_1_output_stack = building.children.trigger_1.get_inventory(defines.inventory.crafter_output)[1]
-  local cb_a = building.children.trigger_1.get_or_create_control_behavior() --[[@as LuaAssemblingMachineControlBehavior]]
-  cb_a.circuit_enable_disable = true
-  cb_a.circuit_condition = {
-    comparator = ">",
-    constant = 0,
+  local cb_1 = building.children.trigger_1.get_or_create_control_behavior() --[[@as LuaAssemblingMachineControlBehavior]]
+  cb_1.circuit_enable_disable = true
+  cb_1.circuit_condition = {
+    comparator = "=",
+    constant = 1,
     first_signal = {
       name = "signal-check",
       type = "virtual"
     },
   }
   connect(building.children.decider_combinator_1, connector.combinator_output_green, building.children.trigger_1, connector.circuit_green)
+  connect(building.children.decider_combinator_1, connector.combinator_output_green, building.children.crafter_a, connector.circuit_green)
 
   building.children.trigger_2 = storage.surface.create_entity{
     name = "assembling-machine-1",
@@ -120,9 +121,28 @@ Planet.setup_combinators = function(building)
   building.children.trigger_2.set_recipe("wooden-chest")
   building.trigger_2_input_stack  = building.children.trigger_2.get_inventory(defines.inventory.crafter_input)[1]
   building.trigger_2_output_stack = building.children.trigger_2.get_inventory(defines.inventory.crafter_output)[1]
-  local cb_b = building.children.trigger_2.get_or_create_control_behavior() --[[@as LuaAssemblingMachineControlBehavior]]
-  cb_b.circuit_enable_disable = true
-  cb_b.circuit_condition = {
+  local cb_2 = building.children.trigger_2.get_or_create_control_behavior() --[[@as LuaAssemblingMachineControlBehavior]]
+  cb_2.circuit_enable_disable = true
+  cb_2.circuit_condition = {
+    comparator = "=",
+    constant = 0,
+    first_signal = {
+      name = "signal-check",
+      type = "virtual"
+    },
+  }
+
+  building.children.trigger_3 = storage.surface.create_entity{
+    name = "assembling-machine-1",
+    force = "neutral",
+    position = {-1.5 + building.x_offset, -11.5}
+  }
+  building.children.trigger_3.set_recipe("wooden-chest")
+  building.trigger_3_input_stack  = building.children.trigger_3.get_inventory(defines.inventory.crafter_input)[1]
+  building.trigger_3_output_stack = building.children.trigger_3.get_inventory(defines.inventory.crafter_output)[1]
+  local cb_3 = building.children.trigger_3.get_or_create_control_behavior() --[[@as LuaAssemblingMachineControlBehavior]]
+  cb_3.circuit_enable_disable = true
+  cb_3.circuit_condition = {
     comparator = ">",
     constant = 0,
     first_signal = {
@@ -133,22 +153,23 @@ Planet.setup_combinators = function(building)
 
   -- sharing the green wire because it causes no conflict, will get the check signal from the decider to the crafter_a
   connect(building.children.trigger_1, connector.circuit_green, building.children.trigger_2, connector.circuit_green)
+  connect(building.children.trigger_2, connector.circuit_green, building.children.trigger_3, connector.circuit_green)
 
   local crafter_a_cb = building.children.crafter_a.get_or_create_control_behavior() --[[@as LuaAssemblingMachineControlBehavior]]
   crafter_a_cb.circuit_read_recipe_finished = true
   crafter_a_cb.circuit_recipe_finished_signal = {type = "virtual", name = "signal-F"}
   crafter_a_cb.circuit_enable_disable = true
   crafter_a_cb.circuit_condition = {
-    comparator = ">",
-    constant = 0,
+    comparator = "=",
+    constant = 1,
     first_signal = {
       name = "signal-check",
       type = "virtual"
     },
   }
-  connect(building.children.crafter_a, connector.circuit_green, building.children.trigger_2, connector.circuit_green)
 
-  Planet.arm_trigger_2(building)
+  Planet.arm_trigger_n(building, 1) -- working
+  Planet.arm_trigger_n(building, 3) -- crafted
 end
 
 Planet.update_constant_combinator_1 = function(building)
@@ -174,14 +195,15 @@ Planet.update_constant_combinator_1 = function(building)
   end
 end
 
-Planet.arm_trigger_2 = function(building)
-  building.trigger_2_output_stack.clear()
-  building.trigger_2_input_stack.set_stack({
+Planet.arm_trigger_n = function(building, n)
+  if not building then return end
+  building["trigger_" .. n .. "_output_stack"].clear()
+  building["trigger_" .. n .. "_input_stack"].set_stack({
     name = "wood",
     count = 2,
     health = 0.5,
   })
-  storage.deathrattles[script.register_on_object_destroyed(building.trigger_2_input_stack.item)] = {name = "trigger-2", building_index = building.index}
+  storage.deathrattles[script.register_on_object_destroyed(building["trigger_" .. n .. "_input_stack"].item)] = {name = "trigger-" .. n, building_index = building.index}
 end
 
 return Planet
