@@ -14,6 +14,7 @@ Date: ????
     - Prepare the triggers for ingredients & done
     - Run the minute crafter only when fulfilled
     - Fire a lua event each time the recipe completes
+    - Setup the working & waiting toggle detection
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.8
 Date: 2025. 06. 10
